# gosu-translator

./: .gitignore  package-lock.json
core.gosu.vn-main/: .gitignore  (+7 more)
core.gosu.vn-main/frontend/backend/: Dockerfile.dev  pyproject.toml
core.gosu.vn-main/frontend/backend/alembic/versions/: 202601080001_create_jobs_table.py  202601080002_drop_asset_voting_tables.py  202601080006_create_game_category_table.py
core.gosu.vn-main/frontend/backend/app/core/: config.py
core.gosu.vn-main/frontend/backend/app/db/: base.py
core.gosu.vn-main/frontend/backend/app/modules/audit/: models.py  router.py  service.py
core.gosu.vn-main/frontend/backend/app/modules/auth/: __init__.py
core.gosu.vn-main/frontend/backend/app/modules/cache/: models.py  schemas.py
core.gosu.vn-main/frontend/backend/app/modules/dictionary/: models.py
core.gosu.vn-main/frontend/backend/app/modules/files/: router.py
core.gosu.vn-main/frontend/backend/app/modules/game_category/: repository.py  router.py  schemas.py  service.py
core.gosu.vn-main/frontend/backend/app/modules/game_glossary/: repository.py  router.py  schemas.py  service.py
core.gosu.vn-main/frontend/backend/app/modules/health/: router.py
core.gosu.vn-main/frontend/backend/app/modules/jobs/: repository.py  router.py  schemas.py
core.gosu.vn-main/frontend/backend/app/modules/language/: models.py  repository.py  schemas.py  service.py
core.gosu.vn-main/frontend/backend/app/tests/: conftest.py  test_health.py
core.gosu.vn-main/frontend/backend/scripts/: check_languages.py  reset_language_pairs_id.py  reset_language_pairs_id.sql
(+364 files in other folders)
